--- a/src/components/CheckOut/Checkout.css
+++ b/src/components/CheckOut/Checkout.css
@@ -1,8 +1,7 @@
-.login {
+.checkout {
     margin-top: 100px;
-    text-align: center;
-    border: 1px solid grey;
+    border: 1px solid gray;
     border-radius: 10px;
     box-shadow: 5px 5px 10px darkgrey;
-    padding: 40px;
+    padding: 30px;
 }
