--- a/src/components/Admin/Admin.css
+++ b/src/components/Admin/Admin.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     width: 200px;
-    background-color: mintcream;
+    background-color: rgb(28, 146, 87);
     position: fixed;
     height: 100%;
     overflow: auto;
